yamls/svc-nodeport-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-alertmanager
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: alertmanager
    prometheus: k8s
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 9090
    targetPort: 9090
    nodePort: 30093
