yamls/svc-nodeport-docker-registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-docker-registry
  namespace: docker-registry
spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 5000
    targetPort: 5000
    nodePort: 30500
