yamls/svc-nodeport-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-grafana
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 3000
    targetPort: 3000
    nodePort: 30080
