yamls/traefik-metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
  labels:
    app: traefik-metrics
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
  type: ClusterIP
